# gateway-service

./: .dockerignore  .env.local  .gitignore  Dockerfile  Makefile  docker-compose.local.yaml  openapi.json  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  auth.py  profile.py  user.py
app/client/user/: user_pb2_grpc.py
app/core/settings/: app.py  development.py  production.py
app/dto/request/: auth.py  profile.py  user.py
app/dto/response/: auth.py  profile.py  user.py
app/errors/: auth_errors.py  user_errors.py
